--- a/city_swipe_app/templates/index.html
+++ b/city_swipe_app/templates/index.html
@@ -20,7 +20,7 @@
 	<p>Logged as {{ user.username }}</p>
 	<a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
   	{% else %}
-	<a class="btn btn-primary" href="{% url 'social:begin' 'google-oauth2' %}">
+	<a class="button" href="{% url 'social:begin' 'google-oauth2' %}">
 	  Login
 	</a>
   	{% endif %}
