--- a/city_swipe_app/static/city_swipe_app/style_for_dipl.css
+++ b/city_swipe_app/static/city_swipe_app/style_for_dipl.css
@@ -46,6 +46,26 @@ footer{
     box-sizing: border-box;
     margin: 10px;
 }
+.button_start{
+	display: inline-block;
+    height: 70px;
+    padding: 0 72px;
+    color: #46d2d2 !important;
+    text-align: center;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 62px;
+    letter-spacing: .4rem;
+    text-transform: uppercase;
+    text-decoration: none !important;
+    white-space: nowrap;
+    background-color: transparent;
+    border-radius: 0px;
+    border: 5px solid #46d2d2;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px;
+}
 .how_works{
 	color: #46d2d2;
 	background-color: white;
