--- a/city_swipe_app/templates/index.html
+++ b/city_swipe_app/templates/index.html
@@ -17,10 +17,9 @@
 	<div class="slogan">Добро пожаловать в City Review - самый быстрый способ рассказать нам о том, что вы любите или не любите в наших Сумах!</div>
 
 	{% if user.is_authenticated %}
-	<p>Logged as {{ user.username }}</p>
 	<a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
   	{% else %}
-	<a class="button" href="{% url 'social:begin' 'google-oauth2' %}">
+	<a class="button_start" href="{% url 'social:begin' 'google-oauth2' %}">
 	  Login
 	</a>
   	{% endif %}
