--- a/city_swipe_app/templates/index.html
+++ b/city_swipe_app/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     {% load static %}
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="{% static 'city_swipe_app/style_for_dipl.css' %}">
+	<link rel="stylesheet" href="{% static 'city_swipe_app/index.css' %}">
 	<link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
     crossorigin="anonymous">
@@ -12,16 +12,18 @@
 <body>
 	<header>
 		<div class="imgs1"><img src="{% static 'city_swipe_app/9.png' %}" width="250" height="250" alt="лого"></div>
-		<div>Это City Review</div>
+		<div class="title">City Review</div>
 	</header>
-	<div class="slogan">Добро пожаловать в City Review - самый быстрый способ рассказать нам о том, что вы любите или не любите в наших Сумах!</div>
-
-	{% if user.is_authenticated %}
-	<a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
-  	{% else %}
-	<a class="button_start" href="{% url 'social:begin' 'google-oauth2' %}">
-	  Login
-	</a>
-  	{% endif %}
+	<div class="slogan-container">
+		<div class="slogan">Ласкаво просимо у City Review - найшвидший спосіб розповісти нам про те, що Вам подобається або не подобається в наших Сумах!</div>
+	</div>
+	<div class="btn-container">
+		<a class="button_start" href="{% url 'social:begin' 'google-oauth2' %}">
+			<div class="google-icon-wrapper">
+				<img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
+			</div>
+		Авторизація
+		</a>
+	</div>
 </body>
 </html>
