--- a/city_swipe_app/static/city_swipe_app/instr.css
+++ b/city_swipe_app/static/city_swipe_app/instr.css
@@ -26,25 +26,32 @@ footer{
 	font-size: 15px;
 	text-align: center;
 }
-.title{
-    letter-spacing: 0.5px;
+.imgs1{
+	margin: 10px;
+    width: 95%;
 }
-.slogan-container{
+.how_works{
+	color:  black !important;
+	/* background-color: white; */
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+.instr-container{
     display: flex;
     justify-content: center;
 }
-.slogan{
-	margin: 25px 150px 45px 150px; 
+.instr{
+	padding: 20px 30px 20px 30px;
+    margin: 0 150px 45px 150px; 
+	font-size: 30px;
     letter-spacing: 0.5px;
-    font-size: 20px;
     text-align: center; 
     background-color: #FFED73;
     border-radius: 30px;
-    padding: 15px 40px 15px 40px;
     width: 70%;
 }
-.button_start{
-	display: inline-block;
+.button{
+    display: inline-block;
     height: 70px;
     padding: 0 40px;
     color: black !important;
@@ -63,18 +70,36 @@ footer{
     box-sizing: border-box;
     margin: 10px;
     border-radius: 30px;
+    box-shadow: 0 2.1px 1.3px rgba(0, 0, 0, 0.044),
+    0 5.9px 4.2px rgba(0, 0, 0, 0.054), 0 12.6px 9.5px rgba(0, 0, 0, 0.061),
+    0 25px 20px rgba(0, 0, 0, 0.1);
 }
-.btn-container{
+.button:hover{
+    background-color: #FFED73;
+}
+.btn-logout-container{
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
 }
-.google-icon-wrapper{
-    display: inline;
-}
-.imgs1{
-	margin: 10px;
-}
-.google-icon{
-    height: 55%;
-    margin-right: 15px;
+.btn-logout{
+    display: inline-block;
+    height: 40px;
+    width: 70px;
+    padding: 5px 8px 5px 8px;
+    color: black !important;
+    text-align: center;
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 62px;
+    letter-spacing: 0.6px;
+    text-transform: uppercase;
+    text-decoration: none !important;
+    white-space: nowrap;
+    background-color: transparent;
+    border-radius: 0px;
+    border: 3px solid #FFED73;
+    cursor: pointer;
+    box-sizing: border-box;
+    margin: 10px;
+    border-radius: 30px;
 }
