--- a/city_swipe_app/templates/instruction.html
+++ b/city_swipe_app/templates/instruction.html
@@ -3,22 +3,26 @@
 <head>
 	{% load static %}
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="{% static 'city_swipe_app/style_for_dipl.css' %}">
+	<link rel="stylesheet" href="{% static 'city_swipe_app/instr.css' %}">
 	<link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
 	<title>Instruction</title>
 </head>
 <body>
 	<header>
-		<div class="imgs1"><img src="{% static 'city_swipe_app/9.png' %}" width="250" height="250" alt="лого"></div>				
+		<!-- <div class="imgs1"><img src="{% static 'city_swipe_app/9.png' %}" width="250" height="250" alt="лого"></div>				 -->
 	</header>
-	<div>
+	<div class="btn-logout-container">
 		{% if user.is_authenticated %}
-			<a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+			<a class="btn-logout" href="{% url 'logout' %}">Logout</a>
 		{% endif %}
 	</div>
-	<div class="how_works"><div style="font-size: 20px">Немного инструкции :)</div>
-	Вот как это работает:</div>
-	<div class="instr">Каждый слайд показывает изображение и вопрос относящиеся к городу Сумы. Всего один вопрос, ответ на который "ДА" или "НЕТ".</div>
-	<a href="../mainPage" class="button">Поехали!</a>
+	<div class="how_works"><div style="font-size: 20px">Трохи інструкції :)</div>
+	Ось як це працює:</div>
+	<div class="instr-container">
+		<div class="instr">Кожен слайд показує зображення і питання, яке має відношення до міста Суми. <br> Всього одне питання, відповідь на яке - "ТАК" або "НІ".</div>
+	</div>
+	<div class="btn-main-container">
+		<a href="../mainPage" class="button">Гайда!</a>
+	</div>	
 </body>
 </html>
