--- a/city_swipe_app/static/city_swipe_app/instr.css
+++ b/city_swipe_app/static/city_swipe_app/instr.css
@@ -50,47 +50,63 @@ footer{
     border-radius: 30px;
     width: 70%;
 }
+.btn-main-container{
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    overflow: hidden;
+}
 .button{
     display: inline-block;
-    height: 70px;
-    padding: 0 40px;
+    width: 60px;
+    padding: 10px 30px;
     color: black !important;
     text-align: center;
     font-size: 17px;
     font-weight: 500;
-    line-height: 62px;
+    line-height: 32px;
     letter-spacing: 0.6px;
     text-transform: uppercase;
     text-decoration: none !important;
     white-space: nowrap;
     background-color: transparent;
-    border-radius: 0px;
     border: 5px solid #FFED73;
     cursor: pointer;
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
     margin: 10px;
     border-radius: 30px;
-    box-shadow: 0 2.1px 1.3px rgba(0, 0, 0, 0.044),
-    0 5.9px 4.2px rgba(0, 0, 0, 0.054), 0 12.6px 9.5px rgba(0, 0, 0, 0.061),
-    0 25px 20px rgba(0, 0, 0, 0.1);
 }
 .button:hover{
     background-color: #FFED73;
+    transition: 0.3s;
 }
+/* .button:after{
+    content: '';
+    position: absolute; bottom: 0; left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #FFED73;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+    z-index: 0;
+  }
+.button:hover:after{    
+    height: 100%;
+    border-radius: 30px;    
+  } */
 .btn-logout-container{
     display: flex;
     justify-content: flex-end;
 }
 .btn-logout{
     display: inline-block;
-    height: 40px;
+    height: 20px;
     width: 70px;
-    padding: 5px 8px 5px 8px;
+    padding: 7px 7px 5px 9px;
     color: black !important;
     text-align: center;
     font-size: 13px;
     font-weight: 500;
-    line-height: 62px;
     letter-spacing: 0.6px;
     text-transform: uppercase;
     text-decoration: none !important;
@@ -99,7 +115,6 @@ footer{
     border-radius: 0px;
     border: 3px solid #FFED73;
     cursor: pointer;
-    box-sizing: border-box;
     margin: 10px;
     border-radius: 30px;
 }
