--- a/city_swipe_app/templates/instruction.html
+++ b/city_swipe_app/templates/instruction.html
@@ -13,7 +13,7 @@
 	</header>
 	<div class="btn-logout-container">
 		{% if user.is_authenticated %}
-			<a class="btn-logout" href="{% url 'logout' %}">Logout</a>
+			<a class="btn-logout" href="{% url 'logout' %}">Вийти</a>
 		{% endif %}
 	</div>
 	<div class="how_works"><div style="font-size: 20px">Трохи інструкції :)</div>
