--- a/city_swipe_app/templates/mainPage.html
+++ b/city_swipe_app/templates/mainPage.html
@@ -10,16 +10,24 @@
 	<title>CityReview</title>
 </head>
 <body>
+	<header>
+
+	</header>
+	<div class="btn-logout-container">
+		{% if user.is_authenticated %}
+			<a class="btn-logout" href="{% url 'logout' %}">Вийти</a>
+		{% endif %}
+	</div>
 	<div class="mainContainer">
 		<div class="imgMain">
-			<span id="title"></span>
+			<span id="about"></span>
 			<img id="image" src="">
 		</div>
 	</div>
 	<div class="btn-container">
-		<button id="no_btn" name="button">NO</button>			
-		<button id="not_know_btn" name="button">DON'T KNOW</button>
-		<button id="yes_btn" name="button">YES</button>
+		<button class="no_btn" name="button">НІ</button>			
+		<button class="not_know_btn" name="button">не знаю</button>
+		<button class="yes_btn" name="button">так</button>
 	</div>		
 	
 </body>
