--- a/city_swipe_app/static/city_swipe_app/end.css
+++ b/city_swipe_app/static/city_swipe_app/end.css
@@ -26,31 +26,27 @@ footer{
 	font-size: 15px;
 	text-align: center;
 }
-.imgs1{
-	margin: 10px;
-    width: 95%;
+.title{
+    letter-spacing: 0.5px;
 }
-.how_works{
-	color:  black !important;
-	/* background-color: white; */
-	padding-top: 30px;
-	padding-bottom: 30px;
-}
-.instr-container{
+.slogan-container{
     display: flex;
     justify-content: center;
 }
-.instr{
-	padding: 20px 30px 20px 30px;
-    margin: 0 150px 45px 150px; 
-	font-size: 30px;
+.slogan{
+	margin: 25px 150px 45px 150px; 
     letter-spacing: 0.5px;
+    font-size: 20px;
     text-align: center; 
     background-color: #FFED73;
     border-radius: 30px;
+    padding: 15px 40px 15px 40px;
     width: 70%;
 }
-.btn-main-container{
+.imgs1{
+	margin: 10px;
+}
+.btn-container{
     position: relative;
     display: inline-block;
     vertical-align: top;
@@ -79,31 +75,4 @@ footer{
 .button:hover{
     background-color: #FFED73;
     transition: 0.3s;
-}
-.btn-logout-container{
-    display: flex;
-    justify-content: flex-end;
-}
-.btn-logout{
-    display: inline-block;
-    width: 70px;
-    padding: 7px 7px 7px 7px;
-    color: black !important;
-    text-align: center;
-    font-size: 13px;
-    letter-spacing: 0.6px;
-    text-transform: uppercase;
-    text-decoration: none !important;
-    white-space: nowrap;
-    background-color: transparent;
-    border-radius: 0px;
-    border: 3px solid #e25454;
-    cursor: pointer;
-    margin: 10px;
-    border-radius: 30px;
-}
-.btn-logout:hover{
-    background-color: #e25454;
-    transition: 0.3s;
-    color: white !important;
 }
