--- a/city_swipe_app/static/city_swipe_app/end.css
+++ b/city_swipe_app/static/city_swipe_app/end.css
@@ -41,25 +41,22 @@ footer{
     background-color: #FFED73;
     border-radius: 30px;
     padding: 15px 40px 15px 40px;
-    width: 70%;
+    width: 50%;
 }
 .imgs1{
 	margin: 10px;
 }
 .btn-container{
-    position: relative;
-    display: inline-block;
-    vertical-align: top;
+    display: flex !important;
+    flex-direction: column;
+    align-items: center;
     overflow: hidden;
 }
 .button{
-    display: inline-block;
-    width: 60px;
     padding: 10px 30px;
     color: black !important;
     text-align: center;
     font-size: 17px;
-    font-weight: 500;
     line-height: 32px;
     letter-spacing: 0.6px;
     text-transform: uppercase;
@@ -68,7 +65,6 @@ footer{
     background-color: transparent;
     border: 5px solid #FFED73;
     cursor: pointer;
-    /*box-sizing: border-box;*/
     margin: 10px;
     border-radius: 30px;
 }
