--- a/city_swipe_app/templates/end.html
+++ b/city_swipe_app/templates/end.html
@@ -15,10 +15,10 @@
 		<div class="title">City Review</div>
 	</header>
 	<div class="slogan-container">
-		<div class="slogan">Більше карточок немає :( <br>Дякую, що витратили час та поділилися вашою думкою! </div>
+		<div class="slogan">Більше карточок немає :( <br>Дякую, що приділили час та поділилися вашою думкою! </div>
 	</div>
 	<div class="btn-container">
-		<a href="" class="button">Подивитись карту</a>
+		<a href="../mapPage" class="button">Подивитись карту</a>
 	</div>
 </body>
 </html>
