--- a/city_swipe_app/static/city_swipe_app/main.css
+++ b/city_swipe_app/static/city_swipe_app/main.css
@@ -35,6 +35,7 @@ body{
     margin-top: 20px;
     margin-bottom: 25px;
     border-radius: 5px !important;
+    position: relative;
 }
 #cardImage{
     height: 400px !important;
@@ -141,4 +142,19 @@ button{
 
 .answer-btn {
 	outline: none !important;
+}
+.aboutCard{
+    position: absolute;
+    font-size: 24px;
+    background-color: white;
+    font-weight: 600;
+    padding: 5px 10px;
+    transform: translateX(-50%);
+    left: 50%;
+    top: 20px;
+    opacity: 0;
+}
+.imgMain:hover .aboutCard{
+    opacity: 1;
+    transition: .5s;
 }
