--- a/city_swipe_app/templates/mapPage.html
+++ b/city_swipe_app/templates/mapPage.html
@@ -36,10 +36,10 @@
     </div>
     <div id="rateCards-container">
         <div id="bestCards">
-            <h4>Найбільше позитивних голосів</h4>
+            <h5 class="h5_header">Найбільше позитивних голосів</h5>
         </div>
         <div id="worstCards">
-            <h4>Найбільше негативних голосів</h4>
+            <h5 class="h5_header">Найбільше негативних голосів</h5>
         </div>
     </div>    
  </body>
