--- a/city_swipe_app/static/city_swipe_app/map.css
+++ b/city_swipe_app/static/city_swipe_app/map.css
@@ -14,7 +14,7 @@
     justify-content: center;
 }
 .card{
-    margin-right: 20px;
+    margin: 15px 20px 15px 0px;
     padding: 15px;
 }
 .btn-reset{
