--- a/city_swipe_app/templates/end.html
+++ b/city_swipe_app/templates/end.html
@@ -12,10 +12,16 @@
 <body>
 	<header>
 		<div class="imgs1"><img src="{% static 'city_swipe_app/9.png' %}" width="250" height="250" alt="лого"></div>
+		
 		<div class="title">City Review</div>
 	</header>
+	<div class="btn-logout-container" id="logout-container-id">
+		{% if user.is_authenticated %}
+			<a class="btn-logout" href="{% url 'logout' %}">Вийти</a>
+		{% endif %}
+	</div> 
 	<div class="slogan-container">
-		<div class="slogan">Більше карточок немає :( <br>Дякую, що приділили час та поділилися вашою думкою! </div>
+		<div class="slogan">Більше карточок немає :( <br>Дякую, що приділили час та поділилися вашою думкою! Заходьте ще :)</div>
 	</div>
 	<div class="btn-container">
 		<a href="../mapPage" class="button">Подивитись карту</a>
